--- a/index.html
+++ b/index.html
@@ -6,5 +6,37 @@
     <title>Odin Landing</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+      <header>
+        <div class="hero header">
+          <span><strong>Header Logo</strong></span>
+          <nav>
+            <ul class="header link">
+              <li><a href="#"></a>header link one</li>
+              <li><a href="#"></a>header link two</li>
+              <li><a href="#"></a>header link three</li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <div class="hero banner">
+        <div class="welcome">
+          <h1>This website is awesome</h1>
+          <p class="welcome info">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+          </p>
+          <button class="welcome btn" type="button">Sign up</button>
+        </div>
+        <img
+          src="https://placehold.co/400x200"
+          alt="placeholder"
+          class="welcome image"
+          width="400"
+          height="200"
+        />
+      </div>
+    </div>
+  </body>
 </html>
