--- a/index.html
+++ b/index.html
@@ -38,5 +38,38 @@
         />
       </div>
     </div>
+    <div class="content">
+      <h3>Some random information</h3>
+
+      <img src="https://placehold.co/100x100" alt="placeholder image" />
+      <p class="content subtext">
+        This is some subtext under an illustration or image.
+      </p>
+
+      <img src="https://placehold.co/100x100" alt="placeholder image" />
+      <p class="content subtext">
+        This is some subtext under an illustration or image.
+      </p>
+
+      <img src="https://placehold.co/100x100" alt="placeholder image" />
+      <p class="content subtext">
+        This is some subtext under an illustration or image.
+      </p>
+
+      <img src="https://placehold.co/100x100" alt="placeholder image" />
+      <p class="content subtext">
+        This is some subtext under an illustration or image.
+      </p>
+    </div>
+    <div class="quote">
+      <p class="quote text">
+        <i>
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </i>
+      </p>
+      <p class="quote author">-Thor, God of Thunder</p>
+    </div>
   </body>
 </html>
