feat(index): add call to action and footer

--- a/index.html
+++ b/index.html
@@ -71,5 +71,18 @@
       </p>
       <p class="quote author">-Thor, God of Thunder</p>
     </div>
+    <div class="call-to-action">
+      <h6>Call to action! It's time!</h6>
+      <p class="call-to-action subtext">
+        Sign up for our product by clicking that button right over there!
+      </p>
+      <button class="btn btn--outline" type="button">Sign up</button>
+    </div>
+    <footer>
+      <p>
+        Created by Solan Ferguson 2024<br />
+        for <a href="https://theodinproject.com/">The Odin Project</a>
+      </p>
+    </footer>
   </body>
 </html>
