fix(index): minor fix to html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="hero">
       <header>
         <div class="hero header">
-          <span><strong>Header Logo</strong></span>
+          <span class="header logo"><strong>Header Logo</strong></span>
           <nav>
             <ul class="header link">
-              <li><a href="#"></a>header link one</li>
-              <li><a href="#"></a>header link two</li>
-              <li><a href="#"></a>header link three</li>
+              <li><a href="#">header link one</a></li>
+              <li><a href="#">header link two</a></li>
+              <li><a href="#">header link three</a></li>
             </ul>
           </nav>
         </div>
