feat(css): style hero section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img
           src="https://placehold.co/400x200"
           alt="placeholder"
-          class="welcome image"
+          class="hero image"
           width="400"
           height="200"
         />
