--- a/index.html
+++ b/index.html
@@ -40,26 +40,53 @@
     </div>
     <div class="content">
       <h3>Some random information</h3>
+      <div class="content image">
+        <div class="info">
+          <img
+            src="https://placehold.co/100x100"
+            alt="placeholder image"
+            height="100"
+            width="100"
+          />
+          <p class="content subtext">
+            This is some subtext under an illustration or image.
+          </p>
+        </div>
 
-      <img src="https://placehold.co/100x100" alt="placeholder image" />
-      <p class="content subtext">
-        This is some subtext under an illustration or image.
-      </p>
-
-      <img src="https://placehold.co/100x100" alt="placeholder image" />
-      <p class="content subtext">
-        This is some subtext under an illustration or image.
-      </p>
-
-      <img src="https://placehold.co/100x100" alt="placeholder image" />
-      <p class="content subtext">
-        This is some subtext under an illustration or image.
-      </p>
-
-      <img src="https://placehold.co/100x100" alt="placeholder image" />
-      <p class="content subtext">
-        This is some subtext under an illustration or image.
-      </p>
+        <div class="info">
+          <img
+            src="https://placehold.co/100x100"
+            alt="placeholder image"
+            height="100"
+            width="100"
+          />
+          <p class="content subtext">
+            This is some subtext under an illustration or image.
+          </p>
+        </div>
+        <div class="info">
+          <img
+            src="https://placehold.co/100x100"
+            alt="placeholder image"
+            height="100"
+            width="100"
+          />
+          <p class="content subtext">
+            This is some subtext under an illustration or image.
+          </p>
+        </div>
+        <div class="info">
+          <img
+            src="https://placehold.co/100x100"
+            alt="placeholder image"
+            height="100"
+            width="100"
+          />
+          <p class="content subtext">
+            This is some subtext under an illustration or image.
+          </p>
+        </div>
+      </div>
     </div>
     <div class="quote">
       <p class="quote text">
