feat(css): style call to action
Basic styling of page is complete at this point. I may see if I can
clean up the html and css to get it more organised and concise. But at
this point the site is visually complete.

--- a/index.html
+++ b/index.html
@@ -99,11 +99,15 @@
       <p class="quote author">-Thor, God of Thunder</p>
     </div>
     <div class="call-to-action">
-      <h6>Call to action! It's time!</h6>
-      <p class="call-to-action subtext">
-        Sign up for our product by clicking that button right over there!
-      </p>
-      <button class="btn btn--outline" type="button">Sign up</button>
+      <div>
+        <div class="signup">
+          <h4>Call to action! It's time!</h4>
+          <p class="subtext">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+      </div>
+      <button class="signup btn" type="button">Sign up</button>
     </div>
     <footer>
       <p>
